added images folder

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </style>
 </head>
 <body>
-    <div>
+    <div class="teaMenu">
         <header>
             <h1>LEM Teashop</h1>
             <p>Service since 2023</p>
