--- a/index.html
+++ b/index.html
@@ -19,6 +19,26 @@
         <header>
             <h1>LEM Teashop</h1>
             <p>Service since 2023</p>
+            <article>
+                <p class="teaFlavor">Aloe Tea</p>
+                <p>&#x20B1; 82.00</p>
+            </article>
+            <article>
+                <p class="teaFlavor">Apply Flower Tea</p>
+                <p>&#x20B1; 77.00</p>
+            </article>
+            <article>
+                <p class="teaFlavor">Asam Black Tea</p>
+                <p>&#x20B1; 110.00</p>
+            </article>
+            <article>
+                <p class="teaFlavor">Broken Orange Pekoe</p>
+                <p>&#x20B1; 83.00</p>
+            </article>
+            <article>
+                <p class="teaFlavor">Bitter Buckwheat Tea</p>
+                <p>&#x20B1; 109.00</p>
+            </article>
         </header>
         <main>
             <!-- SECTION 1 -->
@@ -30,6 +50,6 @@
         </main>
     </div>
     
-    <div>Some Element Content</div>
+    <!-- <div>Some Element Content</div> -->
 </body>
 </html>
