put teaFlavor and price inline

--- a/index.html
+++ b/index.html
@@ -19,25 +19,25 @@
         <header>
             <h1>LEM Teashop</h1>
             <p>Service since 2023</p>
-            <article>
+            <article class="teaItem">
                 <p class="teaFlavor">Aloe Tea</p>
-                <p>&#x20B1; 82.00</p>
+                <p class="teaPrice">&#x20B1; 82.00</p>
             </article>
-            <article>
+            <article class="teaItem">
                 <p class="teaFlavor">Apply Flower Tea</p>
-                <p>&#x20B1; 77.00</p>
+                <p class="teaPrice">&#x20B1; 77.00</p>
             </article>
-            <article>
+            <article class="teaItem">
                 <p class="teaFlavor">Asam Black Tea</p>
-                <p>&#x20B1; 110.00</p>
+                <p class="teaPrice">&#x20B1; 110.00</p>
             </article>
-            <article>
+            <article class="teaItem">
                 <p class="teaFlavor">Broken Orange Pekoe</p>
-                <p>&#x20B1; 83.00</p>
+                <p class="teaPrice">&#x20B1; 83.00</p>
             </article>
-            <article>
+            <article class="teaItem">
                 <p class="teaFlavor">Bitter Buckwheat Tea</p>
-                <p>&#x20B1; 109.00</p>
+                <p class="teaPrice">&#x20B1; 109.00</p>
             </article>
         </header>
         <main>
