--- a/index.html
+++ b/index.html
@@ -18,30 +18,38 @@
     <div class="teaMenu">
         <header>
             <h1>LEM Teashop</h1>
-            <p>Service since 2023</p>
-            <article class="teaItem">
-                <p class="teaFlavor">Aloe Tea</p><p class="teaPrice">&#x20B1; 82.00</p>
-            </article>
-            <article class="teaItem">
-                <p class="teaFlavor">Apply Flower Tea</p><p class="teaPrice">&#x20B1; 77.00</p>
-            </article>
-            <article class="teaItem">
-                <p class="teaFlavor">Asam Black Tea</p><p class="teaPrice">&#x20B1; 110.00</p>
-            </article>
-            <article class="teaItem">
-                <p class="teaFlavor">Broken Orange Pekoe</p><p class="teaPrice">&#x20B1; 83.00</p>
-            </article>
-            <article class="teaItem">
-                <p class="teaFlavor">Bitter Buckwheat Tea</p><p class="teaPrice">&#x20B1; 109.00</p>
-            </article>
+            <p>Service since 2023</p> 
         </header>
         <main>
             <!-- SECTION 1 -->
             <section>
                 <h2>Tea</h2>
+                <article class="teaItem">
+                    <p class="teaFlavor">Aloe Tea</p><p class="teaPrice">&#x20B1; 82.00</p>
+                </article>
+                <article class="teaItem">
+                    <p class="teaFlavor">Apply Flower Tea</p><p class="teaPrice">&#x20B1; 77.00</p>
+                </article>
+                <article class="teaItem">
+                    <p class="teaFlavor">Asam Black Tea</p><p class="teaPrice">&#x20B1; 110.00</p>
+                </article>
+                <article class="teaItem">
+                    <p class="teaFlavor">Broken Orange Pekoe</p><p class="teaPrice">&#x20B1; 83.00</p>
+                </article>
+                <article class="teaItem">
+                    <p class="teaFlavor">Bitter Buckwheat Tea</p><p class="teaPrice">&#x20B1; 109.00</p>
+                </article>
             </section>
             <!-- SECTION 2 -->
-            <section></section>
+            <section>
+                <h2>Tea Collection</h2>
+                <article class="teaItem">
+                    <p class="teaCollection">Black Tea</p><p class="collectionPrice">&#x20B1; 221</p>
+                    <p class="teaCollection">Green Tea</p><p class="collectionPrice">&#x20B1; 96</p>
+                    <p class="teaCollection">Oolong Tea</p><p class="collectionPrice">&#x20B1; 120</p>
+                    <p class="teaCollection">Puerh Tea</p><p class="collectionPrice">&#x20B1; 130</p>
+                </article>
+            </section>
         </main>
     </div>
     
